--- a/MazeRobot/MDK-ARM/MazeRobot/MazeRobot.build_log.htm
+++ b/MazeRobot/MDK-ARM/MazeRobot/MazeRobot.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.39.0.0
 Copyright (C) 2023 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Mark VanDyke, University of Utah, LIC=----
+License Information: Thomas Green, University of Utah, LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.39.0.0
@@ -21,15 +21,15 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.2.0.0
 Dialog DLL:      TARMCM1.DLL V1.14.6.0
  
 <h2>Project:</h2>
-C:\Users\markv\Documents\GitHub\EmbeddedSystemsProject\MazeRobot\MDK-ARM\MazeRobot.uvprojx
+C:\Users\erika\Documents\GitHub\EmbeddedSystemsProject\MazeRobot\MDK-ARM\MazeRobot.uvprojx
 Project File Date:  04/11/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'MazeRobot'
-compiling main.c...
+compiling motor.c...
 linking...
-Program Size: Code=3554 RO-data=274 RW-data=12 ZI-data=1644  
+Program Size: Code=5378 RO-data=274 RW-data=12 ZI-data=1644  
 FromELF: creating hex file...
 "MazeRobot\MazeRobot.axf" - 0 Error(s), 0 Warning(s).
 
@@ -48,8 +48,8 @@ Package Vendor: Keil
 
 <h2>Collection of Component include folders:</h2>
   ./RTE/_MazeRobot
-  C:/Users/markv/AppData/Local/Arm/Packs/ARM/CMSIS/5.9.0/CMSIS/Core/Include
-  C:/Users/markv/AppData/Local/Arm/Packs/Keil/STM32F0xx_DFP/2.1.1/Drivers/CMSIS/Device/ST/STM32F0xx/Include
+  C:/Users/erika/AppData/Local/Arm/Packs/ARM/CMSIS/5.9.0/CMSIS/Core/Include
+  C:/Users/erika/AppData/Local/Arm/Packs/Keil/STM32F0xx_DFP/2.1.1/Drivers/CMSIS/Device/ST/STM32F0xx/Include
 
 <h2>Collection of Component Files used:</h2>
 
