--- a/MazeRobot/MDK-ARM/MazeRobot/MazeRobot.build_log.htm
+++ b/MazeRobot/MDK-ARM/MazeRobot/MazeRobot.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  04/11/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'MazeRobot'
-compiling motor.c...
+compiling main.c...
 linking...
-Program Size: Code=5378 RO-data=274 RW-data=12 ZI-data=1644  
+Program Size: Code=8830 RO-data=274 RW-data=12 ZI-data=1644  
 FromELF: creating hex file...
 "MazeRobot\MazeRobot.axf" - 0 Error(s), 0 Warning(s).
 
